--- a/public/screen.css
+++ b/public/screen.css
@@ -16,6 +16,20 @@ body {
   padding: 25px;
 }
 
+p {
+  line-height: 1.5em;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #4e4e4e;
+}
+
+a:hover {
+  color: #f44747;
+}
+
 h1,
 h2,
 h3,
@@ -32,7 +46,7 @@ body:not(.modal) .overlay {
   filter: blur(0);
 }
 
-button {
+a.button {
   font-family: 'Work Sans', serif;
   font-weight: bold;
   color: #e2fff2;
@@ -40,6 +54,7 @@ button {
   display: flex;
   overflow: hidden;
   padding: 12px;
+  margin: 20px 0;
   cursor: pointer;
   user-select: none;
   transition: all 60ms ease-in-out;
@@ -54,19 +69,20 @@ button {
   justify-content: center;
   align-items: center;
   flex: 0 0 160px;
+  width: 400px;
 }
 
-button:hover {
+a.button:hover {
   transition: all 60ms ease;
   opacity: 0.75;
 }
 
-button:active {
+a.button:active {
   transition: all 60ms ease;
   opacity: 0.65;
 }
 
-button:focus {
+a:focus {
   outline: 2px dotted #52f5ab;
   outline-color: invert;
   outline-offset: -2px;
