--- a/public/screen.css
+++ b/public/screen.css
@@ -47,9 +47,16 @@ h5 {
   margin: 0;
 }
 
+h1 {
+  font-size: 3em;
+}
 body:not(.modal) .overlay {
   display: none;
   filter: blur(0);
+}
+
+ul {
+  width: 75%;
 }
 
 a.button {
@@ -64,7 +71,7 @@ a.button {
   cursor: pointer;
   user-select: none;
   transition: all 60ms ease-in-out;
-  text-align: center;
+  /*text-align: center;*/
   white-space: nowrap;
   text-decoration: none !important;
   text-transform: none;
@@ -72,10 +79,11 @@ a.button {
   border: 0 none;
   border-radius: 4px;
   appearance: none;
+  padding-left: 10%;
   justify-content: center;
   align-items: center;
   flex: 0 0 160px;
-  width: 400px;
+  width: auto;
 }
 
 a.button:hover {
